# lab_2_processing

./: README.md
cpp/lib/magfield/: CMakeLists.txt  README  magfield.cpp  test_magfield.cpp
python/thruster_mixer/: DEPENDENCIES  README  driver_mixer.py  mixermagics.py  mixermagics_draw.py
